# autoservice-qa-bot

./: .env.example  .gitignore  QA Report — 2026-05-21 (3).xlsx  README.md  pyproject.toml
app/: main.py
app/core/: config.py
app/models/: schemas.py
app/services/: analyzer.py  google_drive.py  google_sheets.py  transcription.py
tests/: conftest.py  test_analyzer.py  test_config.py  test_google_drive.py  test_google_sheets.py  test_main.py  test_transcription.py
